scripts/nullness/wpi/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8.txt
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/Main.java:111: error: (dereference.of.nullable) $$ 1 $$ list.get(j).datiqingkuang $$ ( 2704, 2729 ) $$ dereference of possibly-null reference list.get(j).datiqingkuang
				timuFenzhi[i] += list.get(j).datiqingkuang.get(i);
				                            ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/Main.java:118: error: (dereference.of.nullable) $$ 1 $$ list.get(i).datiqingkuang $$ ( 2842, 2867 ) $$ dereference of possibly-null reference list.get(i).datiqingkuang
				list.get(i).score += list.get(i).datiqingkuang.get(j) * timuFenzhi[j];
				                                ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/interpreter/InterpreterTest.java:80: error: (unboxing.of.nullable) $$ 1 $$ var.get(key) $$ ( 1705, 1717 ) $$ unboxing a possibly-null reference var.get(key)
		return var.get(key);
		              ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/interpreter/InterpreterTest.java:104: error: (unboxing.of.nullable) $$ 1 $$ left.interpreter(var) $$ ( 2179, 2200 ) $$ unboxing a possibly-null reference left.interpreter(var)
		return left.interpreter(var) + right.interpreter(var);
		                       ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/interpreter/InterpreterTest.java:104: error: (unboxing.of.nullable) $$ 1 $$ right.interpreter(var) $$ ( 2203, 2225 ) $$ unboxing a possibly-null reference right.interpreter(var)
		return left.interpreter(var) + right.interpreter(var);
		                                                ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/interpreter/InterpreterTest.java:117: error: (unboxing.of.nullable) $$ 1 $$ left.interpreter(var) $$ ( 2455, 2476 ) $$ unboxing a possibly-null reference left.interpreter(var)
		return left.interpreter(var) - right.interpreter(var);
		                       ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/interpreter/InterpreterTest.java:117: error: (unboxing.of.nullable) $$ 1 $$ right.interpreter(var) $$ ( 2479, 2501 ) $$ unboxing a possibly-null reference right.interpreter(var)
		return left.interpreter(var) - right.interpreter(var);
		                                                ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/mediator/AbstractMediator.java:57: error: (dereference.of.nullable) $$ 1 $$ super.sale $$ ( 1091, 1101 ) $$ dereference of possibly-null reference super.sale
		int saleStatus = super.sale.getSaleStatus();
		                      ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/mediator/AbstractMediator.java:61: error: (dereference.of.nullable) $$ 1 $$ super.stock $$ ( 1213, 1224 ) $$ dereference of possibly-null reference super.stock
			super.stock.increase(number);
			     ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/mediator/AbstractMediator.java:73: error: (dereference.of.nullable) $$ 1 $$ super.stock $$ ( 1437, 1448 ) $$ dereference of possibly-null reference super.stock
		if (super.stock.getStockNumber() < number)
		         ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/mediator/AbstractMediator.java:75: error: (dereference.of.nullable) $$ 1 $$ super.purchase $$ ( 1497, 1511 ) $$ dereference of possibly-null reference super.purchase
			super.purchase.buyIBMcomputer(number);
			     ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/mediator/AbstractMediator.java:83: error: (dereference.of.nullable) $$ 1 $$ stock $$ ( 1657, 1662 ) $$ dereference of possibly-null reference stock
		System.out.println("折价销售IBM电脑" + stock.getStockNumber() + "台");
		                                 ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/mediator/AbstractMediator.java:90: error: (dereference.of.nullable) $$ 1 $$ super.sale $$ ( 1752, 1762 ) $$ dereference of possibly-null reference super.sale
		super.sale.offSale();
		     ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/mediator/AbstractMediator.java:92: error: (dereference.of.nullable) $$ 1 $$ super.purchase $$ ( 1794, 1808 ) $$ dereference of possibly-null reference super.purchase
		super.purchase.refuseBuyIBM();
		     ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:19: error: (initialization.static.field.uninitialized) $$ 1 $$ currentLiftState $$ ( 574, 616 ) $$ static field currentLiftState not initialized
	public static ILiftState currentLiftState;
	                         ^
Note: ../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/observe/ObserveTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
15 errors
